--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.18.1
 yarn_mappings=1.18.1+build.22
 loader_version=0.14.8
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0
 maven_group=club.moonlane
 archives_base_name=fortunateores
 # Dependencies
